--- a/css/style.css
+++ b/css/style.css
@@ -84,9 +84,6 @@ input[type=range] {
 	font-size: 1.25em;
 }
 
-label {
-}
-
 button {
 	border: none;
 	border-radius: 4px;
